sharing: Fix crash when disabling sharing

Left-over code from 9d45904f3c2e06240574145f9916686475497803 meant that
we'd try to disable a non-existent switch.

https://bugzilla.gnome.org/show_bug.cgi?id=756391